--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div><!--/.nav-collapse -->
     </div>
 </div>
-<div class="container">
+<div class="container" id="content">
 
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron" style="display: none;">
