start to add gains

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">Accounding-ost</a>
         </div>
         <div class="navbar-collapse collapse" id="menu-container">
 
@@ -36,7 +36,7 @@
 
 
     <div>
-        <input type="text" placeholder="amount" class="amount"/>
+        <input type="text" placeholder="add gain" class="gain"/>
         <button class="btn btn-info add">Add</button>
     </div>
 
