working navigator, bills

--- a/roman/index.html
+++ b/roman/index.html
@@ -27,8 +27,8 @@
           <ul class="nav navbar-nav main-menu">
             <li class="active"><a href="#">Home</a></li>
 
+            <li><a href="#bills">Bills</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
 
             <form class="navbar-form navbar-right" role="form">
               <div class="form-group">
@@ -54,10 +54,10 @@
     </div>
 -->
 
-<div class="container" id="container-up"></div>
-<div class="container" id="container"></div>
-<div class="container" id="container-down"></div>
-<div class="container" id="container-tmp"></div>
+<div class="container content" id="container-up"></div>
+<div class="container content" id="container"></div>
+<div class="container content" id="container-down"></div>
+<div class="container content" id="container-tmp"></div>
 
 
 <script type="text/javascript" src="js/jquery.js"></script>
@@ -124,6 +124,11 @@
 
 <script type="text/javascript" src="myjs/mvc.js"></script>
 <script type="text/javascript" src="myjs/bills.js"></script>
+
+<script type="text/javascript" src="myjs/page/homePage.js"></script>
+<script type="text/javascript" src="myjs/page/billsPage.js"></script>
+<script type="text/javascript" src="myjs/page/aboutPage.js"></script>
+
 <script type="text/javascript" src="myjs/app.js"></script>
 
 
