--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 <script type="text/javascript" src="myjs/page/homePage.js"></script>
 <script type="text/javascript" src="myjs/page/billsPage.js"></script>
-<script type="text/javascript" src="myjs/page/gainssPage.js"></script>
+<script type="text/javascript" src="myjs/page/gainsPage.js"></script>
 <script type="text/javascript" src="myjs/page/aboutPage.js"></script>
 
 <script type="text/javascript" src="myjs/app.js"></script>
