--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/st_jstree.css" rel="stylesheet" /> 
     <link href="css/bootstrap.css" rel="stylesheet"/>
     <link href="css/bootstrap-theme.css" rel="stylesheet"/>
-    <link href="starter-template.css" rel="stylesheet"/>
+    <link href="css/starter-template.css" rel="stylesheet"/>
 </head>
 
 <body>  
