--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="css/bootstrap.css" rel="stylesheet"/>
     <link href="css/bootstrap-theme.css" rel="stylesheet"/>
     <link href="css/starter-template.css" rel="stylesheet"/>
+    <link href="css/own_style.css" rel="stylesheet"/>
 </head>
 
 <body>  
@@ -130,6 +131,7 @@
         </div>
         <div class="modal-body">
           <input type="text" value="" id="num_gain">sum</input>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
